--- a/admin/css/dashboard.css
+++ b/admin/css/dashboard.css
@@ -1,6 +1,4 @@
 /* Reset and Base Styles */
-
-/* Color Variables */
 /* Color Variables */
 :root {
       --primary-black: #000000;
@@ -30,94 +28,6 @@
 /* Dashboard Container */
 
 
-/* Header */
-
-
-.dashboard-header {
-    background: var(--neutral-white);
-    border-bottom: 1px solid var(--border-color);
-    padding: 10px;
-    position: sticky;
-    top: 0;
-    z-index: 100;
-}
-
-.header-content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.header-left {
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-}
-.logout-button-container{
-    display: none;
-}
-.logout-button-container .logout-button{
-    padding: 10px 16px;
-    border-radius: 4px;
-    color: var(--neutral-white);
-    background-color: var(--secondary-light-blue);
-    border: none;
-}
-
-.header-left h1 {
-    font-size: 18px;
-    font-weight: 600;
-    color: var(--text-primary);
-    margin-bottom: 2px;
-}
-
-.header-left p {
-    color: var(--text-secondary);
-    font-size: 12px;
-}
-
-.header-right {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-}
-
-.building-selector {
-    padding: 8px 12px;
-    border: 1.5px solid var(--secondary-blue);
-    border-radius: 6px;
-    background: var(--neutral-white);
-    font-size: 12px;
-    font-weight: 600;
-    color: var(--secondary-blue);
-}
-
-.datetime {
-    display: flex;
-    flex-direction: column;
-    text-align: right;
-}
-
-.date {
-    font-size: 12px;
-    color: var(--text-primary);
-    font-weight: 700;
-}
-
-.time {
-    font-size: 11px;
-    color: var(--text-secondary);
-}
-
-.user-avatar {
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    background: var(--secondary-light-blue);
-    border: none;
-    cursor: pointer;
-    font-size: 14px;
-    color: var(--neutral-white);
-}
 
 /* Dashboard Content */
 .dashboard-content {
@@ -590,7 +500,11 @@ background: var(--primary-red);
     gap: 14px;
 
 }
-
+.grid-loading{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .parking-block {
     flex: 1;
     border: 1px solid var(--border-color);
@@ -610,7 +524,7 @@ background: var(--primary-red);
 .slots-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 6px;
+    gap: 10px;
 }
 
 .parking-slot {
@@ -778,29 +692,8 @@ background: var(--primary-red);
 }
 
 @media (max-width: 768px) {
+     
     
-    
-    .header-content {
-        flex-direction: column;
-        gap: 16px;
-        align-items: flex-start;
-    }
-
-    .header-right {
-        width: 100%;
-        justify-content: space-between;
-    }
-
-    .header-left{
-        width: 100%;
-    }
-    .header-left .logout-button-container{
-        display: block;
-    }
-    .datetime {
-        display: none;    
-    }
-
     .stats-grid {
         display: grid;
         grid-template-columns: repeat(2,1fr);
